@@ -11,6 +11,7 @@ pyroscope (0.3.7) hardy; urgency=low
   * Added common --cron option that activates logging into the file
     ./log/cron.log in the configuration directory
   * Moved default output formats to [FORMATS] section of "config.ini"
+  * chtor: added --output-directory option
 
  -- pyroscope <pyroscope.project@gmail.com>  Mon, 30 Aug 2010 00:12:30 +0200
 
